# lc-course

./: .env  hello.ipynb  pyproject.toml
.ipynb_checkpoints/: hello-checkpoint.ipynb
notebook/第一部分-Ai通识与基础/: 1.1_OpenAI.ipynb
notebook/第二部分-langchain/: 2.1_helloworld.ipynb  2.2_models.ipynb  2.3_messages.ipynb  2.4_prompt.ipynb  2.5_tools.ipynb  2.6_memory.ipynb  2.7_uat.ipynb
notebook/米其林管家Agent/: agent.ipynb
