[project]
name = "lc-course"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dashscope>=1.25.17",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "notebook>=7.5.5",
    "openai>=2.33.0",
    "python-dotenv>=1.2.2",
]
